src/objects/Account_Role_Detail_Capability__c.object
<CustomObject>
    <description>[DEPRECATED One Source] Account Role Detail Capability</description>
    <fields>
        <fullName>AULD_Number_Plug_in_Points__c</fullName>
        <description>Discribe the number of ULD Plugin points</description>
        <label>Number of Plug-in Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Measurement_System__c</fullName>
        <description>Applied Measurement System</description>
        <label>Applied Measurement System</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Discribe if the capability is available</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BUBDA_Located_Within_Secured_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if is Located within Secured Zone</description>
        <label>Located within Secured Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BUBDA_Sinking_Pit_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if Sinking Pit is available</description>
        <label>Sinking Pit Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Actions_Taken__c</fullName>
        <description>Actions Taken</description>
        <label>Actions Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Alarm_Last_12M__c</fullName>
        <description>Alarm</description>
        <label>Alarm Last 12M</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Audio_Visual_Alarms__c</fullName>
        <description>Audio Visual Alarms</description>
        <label>Audio Visual Alarms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_BUProcedure_In_Malfunction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is a backup procedure in case of malfunction</description>
        <label>Back-up Procedure in case of malfunction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_DGR_Dedicated_Formula__c</fullName>
        <description>Describe if there is space dedicated to DGR</description>
        <formula>IF(
OR(ISPICKVAL(CRSTR_DGR_Dedicated__c,&quot;Entire_Room&quot;), ISPICKVAL(CRSTR_DGR_Dedicated__c,&quot;Segregated_Area_Whithin_Room&quot;)),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DG Dedicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_DGR_Dedicated__c</fullName>
        <description>Describe if there is space dedicated to DGR</description>
        <label>DG Dedicated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entire_Room</fullName>
                    <label>Entire Room</label>
                </value>
                <value>
                    <fullName>Segregated_Area_Whithin_Room</fullName>
                    <label>Segregated Area whithin Room</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRSTR_Deviation_Reported__c</fullName>
        <description>Deviation Reported</description>
        <label>Deviation Reported</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Devices_Calibrated__c</fullName>
        <description>Devices Calibrated</description>
        <label>Devices Calibrated</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Explain_BUProcedure__c</fullName>
        <description>Explain BU Procedure</description>
        <label>Explain BU Procedure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Frequently_Alarm_Tested__c</fullName>
        <description>Frequently Alarm Tested</description>
        <label>Frequently Alarm Tested</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Frequently__c</fullName>
        <description>Frequently</description>
        <label>Frequently</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Import_Export__c</fullName>
        <description>Import / Export</description>
        <label>Import / Export</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Import_And_Export</fullName>
                    <label>Import and Export</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRSTR_Mapping_Done__c</fullName>
        <description>Mapping Done</description>
        <label>Mapping Done</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Max_Height_Per_Position__c</fullName>
        <description>Describes the max height per positions in cm</description>
        <label>Max. Height per position (in cm)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_N_Mapping_Devices__c</fullName>
        <description>Mapping Devices</description>
        <label>N Mapping Devices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Pharma_Dedicated_Formula__c</fullName>
        <description>Describes if there is space dedicated to Pharma</description>
        <formula>IF(
OR(ISPICKVAL(CRSTR_Pharma_Dedicated__c,&quot;Entire_Room&quot;), ISPICKVAL(CRSTR_Pharma_Dedicated__c,&quot;Segregated_Area_Whithin_Room&quot;)),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharma Dedicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Pharma_Dedicated__c</fullName>
        <description>Describes if there is space dedicated to Pharma</description>
        <label>Pharma Dedicated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entire_Room</fullName>
                    <label>Entire Room</label>
                </value>
                <value>
                    <fullName>Segregated_Area_Whithin_Room</fullName>
                    <label>Segregated Area Whithin Room</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRSTR_Positions_10ft_ULDs__c</fullName>
        <description>Describes the number of  positions 10ft</description>
        <label>ULD Positions 10FT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Positions_20ft_ULDs__c</fullName>
        <description>Describes the number of positions 20ft</description>
        <label>ULD Positions 20FT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Positions_AKE__c</fullName>
        <description>Describes the number of positions AKE</description>
        <label>ULD Positions AKE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Record_Available_For_Complaint__c</fullName>
        <description>Record Available For Complaint</description>
        <label>Record Available For Complaint</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Scope_And_Result__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Scope and Result</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Sensor_Calibration_Records__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Sensor Calibration Records</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Sensors_Calibrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if the sensors are calibrated</description>
        <label>Sensors Calibrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Spots_Identified__c</fullName>
        <description>Spots Identified</description>
        <label>Spots Identified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRSTR_Storage_Room_Dimensions_H__c</fullName>
        <description>Describes the dimensions of the storage room (Height)</description>
        <label>Storage Room Dimensions (in m) Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Storage_Room_Dimensions_L__c</fullName>
        <description>Describes the dimensions of the storage room (Length)</description>
        <label>Storage Room Dimensions (in m) Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Storage_Room_Dimensions_W__c</fullName>
        <description>Describes the dimensions of the storage room (Width)</description>
        <label>Storage Room Dimensions (in m) Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Temp_Monitored_247__c</fullName>
        <description>Temp Monitored</description>
        <label>Temp Monitored 247</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRSTR_Temperature_Control_Alarm_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is a Temperature Control Alarm System</description>
        <label>Temperature Control Alarm System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Temperature_Mapped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if the temperature is mapped</description>
        <label>Temperature Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Temperature_Readouts_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if are available temperature readouts</description>
        <label>Temperature Readouts available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSTR_Total_Storage_Space__c</fullName>
        <description>Decribes the total storage space in m2</description>
        <label>Total Storage Space (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRSTR_Years_Record_On_File__c</fullName>
        <description>Years Record On File</description>
        <label>Years Record On File</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The picklist value, must be included in the custom metadata &quot;ICG Capabaility Configuration&quot; in the row with type &quot;Categories by record Type&quot; and the same key as the own record type</description>
        <inlineHelpText>The picklist value, must be included in the custom metadata &quot;ICG Capabaility Configuration&quot; in the row with type &quot;Categories by record Type&quot; and the same key as the own record type</inlineHelpText>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ICG_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPI_Explain_Delivery_Pickup_Procedure__c</fullName>
        <description>Discribe the procedure of delivery/pickup</description>
        <label>Delivery / Pickup Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPI_Link_PreArrival_Slot_Booking_Website__c</fullName>
        <description>URL to booking website of the pre-arrival slot</description>
        <label>Link to Pre-Arrival Slot Booking website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DPI_Number_Export_Docking_Gates__c</fullName>
        <description>Describes the number of export docking gates</description>
        <label>Number of Export Docking Gates</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPI_Number_Import_Docking_Gates__c</fullName>
        <description>Describes the number of import docking gates</description>
        <label>Number of Import Docking Gates</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPI_Number_Parking_Slots__c</fullName>
        <description>Describes the number of parking slots</description>
        <label>Number of Parking Slots</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPI_Temperature_Controlled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if the temperature is controlled</description>
        <label>Temperature Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes the description of the capabilities</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Name__c</fullName>
        <description>Describe the name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_System_Provider__c</fullName>
        <description>Describe the system provider</description>
        <label>System Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_System_Self_Carrier_Owned__c</fullName>
        <description>System Self Carrier Owned</description>
        <label>System Self Carrier Owned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System_Self_Owned</fullName>
                    <label>System self-owned</label>
                </value>
                <value>
                    <fullName>Carrier_Owned</fullName>
                    <label>Carrier owned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Type_Commodity__c</fullName>
        <description>Describe the type of commodity</description>
        <label>Type of Commodity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General_Cargo</fullName>
                    <label>General Cargo</label>
                </value>
                <value>
                    <fullName>Airmail</fullName>
                </value>
                <value>
                    <fullName>Live_Animals</fullName>
                    <label>Live Animals</label>
                </value>
                <value>
                    <fullName>Perishables</fullName>
                </value>
                <value>
                    <fullName>Dangerous</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Version__c</fullName>
        <description>Describe the version</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>Describes the Equipment of the capability</description>
        <label>Equipment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ICG_Equipment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Date when it moves to depreciated.</description>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <description>Describe the number of trucks</description>
        <label>Fleet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSE_Lifting_Capacity__c</fullName>
        <description>Describes the Lifting Capacity in Kg</description>
        <label>Lifting Capacity (in kg)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSE_ULD_Compatibility_Type_AKE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is compatibility AKE</description>
        <label>ULD Compatibility AKE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSE_ULD_Compatibility_Type_F10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is compatibility 10FT</description>
        <label>ULD Compatibility 10FT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSE_ULD_Compatibility_Type_F20__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is compatibility 20FT</description>
        <label>ULD Compatibility 20FT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Planned_To_Implement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Answer of the question, Do you plan to implement it?</description>
        <label>Do you plan to implement it?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAC_Animal_Attendant_Area_Size__c</fullName>
        <description>Describe the size of the area of animal attendant in m2</description>
        <label>Animal Attendant Area Size (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAC_Dedicated_Temporary_Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if it is necessary dedicated temporary storage</description>
        <label>Dedicated Temporary Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAC_Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is handler</description>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAC_Resting_Area_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describe if it is available resting area</description>
        <label>Resting Area Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAC_Stalls__c</fullName>
        <description>Describes the number of stalls</description>
        <label>Stalls</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAC_Temperature_Control__c</fullName>
        <description>Describes if the temperature is controlled and the range in ºC</description>
        <label>Temperature Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAC_Total_Surface_Area__c</fullName>
        <description>Describes the total surface area in m2</description>
        <label>Total Surface Area (in m2)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_Type__c</fullName>
        <description>GxA Integration field</description>
        <label>Method / Type</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_Info_Document__c</fullName>
        <description>Plain text in Json format that contains if a document is visble publicly and the url to resource</description>
        <inlineHelpText>visible: show or not the document publicly
url: url where is stored the document</inlineHelpText>
        <label>Upload obligation documentation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_Info_Link__c</fullName>
        <description>Describes a Link to get more information</description>
        <label>Enter URL to obligation documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Describes the number</description>
        <label>Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTCEI_Max_ULD_Size_Dimensions_H__c</fullName>
        <description>Describes the max ULD size dimensions (Height)</description>
        <label>Max. ULD Size Dimensions (in cm) Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTCEI_Max_ULD_Size_Dimensions_L__c</fullName>
        <description>Describes the max ULD size dimensions (Length)</description>
        <label>Max. ULD Size Dimensions (in cm) Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTCEI_Max_ULD_Size_Dimensions_W__c</fullName>
        <description>Describes the max ULD size dimensions (Width)</description>
        <label>Max. ULD Size Dimensions (in cm) Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Airport_Size__c</fullName>
        <description>Describe the airport size in m2</description>
        <label>Overall Airport Size (in m2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photos_Private__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Photos Private</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Photos__c</fullName>
        <description>Plain text in Json format that contains if a photo is visble publicly and the url to resource</description>
        <inlineHelpText>visible: show or not the photo publicly
url: url where is stored the photo</inlineHelpText>
        <label>Photos</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_To_Implement_By__c</fullName>
        <description>Describes the date of Planned to Implement</description>
        <label>Planned To Implement by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Printscreen__c</fullName>
        <description>Store private pictures url (Amazon S3) separated by \n</description>
        <label>Printscreen</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Road_Feeder_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is Road Feeder Services</description>
        <label>Road Feeder Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCA_Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if the scanners are automated.</description>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Aperture_Size_Height_Cm__c</fullName>
        <description>Describes the aperture size height in cm</description>
        <label>Aperture Size (in cm) Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Aperture_Size_Width_Cm__c</fullName>
        <description>Describes the aperture size width in cm</description>
        <label>Aperture Size (in cm) Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Assembly_Part_Hardware_Number__c</fullName>
        <description>Describes the assembly part o the hardware number</description>
        <label>Assembly Part / Hardware Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Device_Model_Number_Designation__c</fullName>
        <description>Describes the device model number designation</description>
        <label>Device Model Number / Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ECAC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if the ECAC is approved</description>
        <label>ECAC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Free_Running_And_REST__c</fullName>
        <description>Describes if there is free running or/and rest</description>
        <label>Free Running and REST</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free_Running</fullName>
                    <label>Free Running</label>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
                <value>
                    <fullName>Free_Running_And_REST</fullName>
                    <label>Free Running And REST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_Manufacturer__c</fullName>
        <description>Describes the manufacturer</description>
        <label>Manufacturer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_TSA_ACSTL_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if TSA ACSTL is Approved</description>
        <label>TSA ACSTL Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Trained_For_Drugs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is trained for drugs</description>
        <label>Trained for Drugs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Trained_For_Explosives_EDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is trained for explosives</description>
        <label>Trained for Explosives (EDD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Trained_For_Illegal_Wild_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is trained for illegal wild life</description>
        <label>Trained for Illegal Wild Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Trained_For_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is trained for money</description>
        <label>Trained for Money</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEAM_Actively_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is actively monitored</description>
        <label>Actively Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEAM_Color__c</fullName>
        <description>Describes the color</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Black_Or_White</fullName>
                    <label>Black Or White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_Contract2__c</fullName>
        <description>SEAM Contract 2</description>
        <label>Contract2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEAM_Contract__c</fullName>
        <description>SEAM Contract</description>
        <label>Contract</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEAM_Employee_Record2__c</fullName>
        <description>SEAM Employee Record 2</description>
        <label>Employee Record2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEAM_Employee_Record__c</fullName>
        <description>SEAM Employee Record</description>
        <label>Employee Record</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEAM_Facility_Access_Control_Type__c</fullName>
        <description>Describes the type of the access control</description>
        <label>Facility Access Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ID_Card</fullName>
                    <label>ID Card</label>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_Fixed_Or_Pan__c</fullName>
        <description>Describes if is fixed or pan</description>
        <label>Fixed or Pan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Pan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_ID_Card_Biometrics__c</fullName>
        <description>Describes if the access control is by ID Card or Biometrics or both</description>
        <label>ID Card / Biometrics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ID Card</fullName>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEAM_Infrared_Equipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is infrared equipped</description>
        <label>Infrared Equipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEAM_Limited_Access_Areas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is limited access areas</description>
        <label>Limited Access Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEAM_Motion_Sensor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Describes if there is motion sensor</description>
        <label>Motion Sensor</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>